--- a/public/sass/@media_customer_details.scss
+++ b/public/sass/@media_customer_details.scss
@@ -328,13 +328,19 @@
                             label {
                                 font-size: $font-s;
                             }
+                            input {
+                                font-size: $font-vl;
+                            }
                             .agree-container {
-                                input[type="radio"] {
+                                input[type="checkbox"] {
                                     width: 25px;
                                     height: 25px;
                                 }
                                 p {
                                     font-size: $font-vs;
+                                    width: 90%;
+                                    margin-left: 5%;
+                                    margin-right: 5%;
                                 }
                             }
                             .form-btn-wrap {
@@ -394,13 +400,19 @@
                             label {
                                 font-size: $font-s;
                             }
+                            input {
+                                font-size: $font-vl;
+                            }
                             .agree-container {
-                                input[type="radio"] {
+                                input[type="checkbox"] {
                                     width: 25px;
                                     height: 25px;
                                 }
                                 p {
                                     font-size: $font-vs;
+                                    width: 90%;
+                                    margin-left: 5%;
+                                    margin-right: 5%;
                                 }
                             }
                             .form-btn-wrap {
@@ -460,13 +472,19 @@
                             label {
                                 font-size: $font-s;
                             }
+                            input {
+                                font-size: $font-vl;
+                            }
                             .agree-container {
-                                input[type="radio"] {
+                                input[type="checkbox"] {
                                     width: 25px;
                                     height: 25px;
                                 }
                                 p {
                                     font-size: $font-vs;
+                                    width: 90%;
+                                    margin-left: 5%;
+                                    margin-right: 5%;
                                 }
                             }
                             .form-btn-wrap {
@@ -526,13 +544,19 @@
                             label {
                                 font-size: $font-s;
                             }
+                            input {
+                                font-size: $font-vl;
+                            }
                             .agree-container {
-                                input[type="radio"] {
+                                input[type="checkbox"] {
                                     width: 25px;
                                     height: 25px;
                                 }
                                 p {
                                     font-size: $font-vs;
+                                    width: 90%;
+                                    margin-left: 5%;
+                                    margin-right: 5%;
                                 }
                             }
                             .form-btn-wrap {
@@ -593,13 +617,19 @@
                             label {
                                 font-size: $font-s;
                             }
+                            input {
+                                font-size: $font-vl;
+                            }
                             .agree-container {
-                                input[type="radio"] {
+                                input[type="checkbox"] {
                                     width: 25px;
                                     height: 25px;
                                 }
                                 p {
                                     font-size: $font-vs;
+                                    width: 90%;
+                                    margin-left: 5%;
+                                    margin-right: 5%;
                                 }
                             }
                             .form-btn-wrap {
@@ -660,13 +690,19 @@
                             label {
                                 font-size: $font-s;
                             }
+                            input {
+                                font-size: $font-vl;
+                            }
                             .agree-container {
-                                input[type="radio"] {
+                                input[type="checkbox"] {
                                     width: 25px;
                                     height: 25px;
                                 }
                                 p {
                                     font-size: $font-vs;
+                                    width: 90%;
+                                    margin-left: 5%;
+                                    margin-right: 5%;
                                 }
                             }
                             .form-btn-wrap {
